--- a/css/style.css
+++ b/css/style.css
@@ -11,12 +11,21 @@
   --very-light-gray: hsl(0, 0%, 95%);
 }
 
-/* font-family: 'Big Shoulders Display', cursive; */
+::-webkit-scrollbar {
+  width: 5px;
+  background-color: var(--transparent-white);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--dark-cyan);
+}
 
 body {
   width: 100vw;
   height: 100vh;
+  overflow: hidden;
   min-height: 100vh;
+  overflow-y: scroll;
   font-family: "Lexend Deca", sans-serif;
   background-color: var(--very-light-gray);
 }
@@ -32,6 +41,7 @@ body {
 }
 
 .hero {
+  transition: all 300ms;
   width: 920px;
   height: 500px;
   overflow: hidden;
@@ -83,9 +93,11 @@ body {
   outline: none;
   width: 150px;
   height: 50px;
+  padding: 0;
   margin-top: auto;
   border-radius: 25px;
   background-color: var(--very-light-gray);
+  border: 2px solid var(--very-light-gray);
 }
 
 .hero__button:hover {
@@ -120,4 +132,50 @@ body {
 
 .hero__button--dark:hover {
   background-color: var(--very-dark-cyan);
+}
+
+/* === */
+
+.attribution {
+  font-size: 10px;
+  line-height: 20px;
+  text-align: center;
+  color: var(--dark-cyan);
+}
+
+.attribution a {
+  color: var(--bright-orange);
+}
+
+@media screen and (max-width: 950px) {
+  body {
+    height: 1500px;
+  }
+
+  .hero {
+    width: 330px;
+    height: 1330px;
+    grid-template-columns: 330px;
+    grid-template-rows: repeat(3, 443.33px);
+  }
+
+  .hero__paragraph {
+    margin-bottom: 20px;
+  }
+}
+
+@media screen and (max-width: 350px) {
+  .hero {
+    width: 90%;
+    grid-template-columns: 1fr;
+  }
+
+  .hero__container{
+    padding: 20px;
+  }
+
+  .hero__paragraph{
+    margin-bottom: 50px;
+  }
+
 }
